style.css
/* @override http://localhost/k2/wp-content/themes/k2/style.css */

/*
Theme Name:		K2
Version:		1.0.2
Theme URI:		http://getk2.com
Author:			Various Artists
Author URI:		http://getk2.com/
Description:	<strong><a href="themes.php?page=k2-options">Configure K2</a></strong> or visit the <a href="http://groups.google.com/group/k2-support">support forums</a>, <a href="http://code.google.com/p/kaytwo/w/list">the wiki</a> or <a href="http://code.google.com/p/kaytwo/issues/list">the bug tracker</a>. K2 was developed by <a href="http://binarybonsai.com/">Michael</a>, <a href="http://chrisjdavis.org/">Chris</a>, <a href="http://zeo.unic.net.my/">Zeo</a>, <a href="http://stevelam.org/">Steve</a>, Ben and <a href="http://xentek.net/">Eric Marden</a>, and is licensed under the <a href="http://www.opensource.org/licenses/gpl-license.php">GPL</a>.
Tags:			blue, custom-header, fixed-width, flexible-width, one-column, two-columns, three-columns, theme-options, threaded-comments, microformats, translation-ready, light

The Real K2:	http://en.wikipedia.org/wiki/K2

$Revision$
*/



/* Reset CSS v1.0 from http://meyerweb.com/eric/tools/css/reset/ */
html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, font, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td {
	margin: 0;
	padding: 0;
	}


/* Typography */

body {
    font-family: "Lucida Grande", "Lucida Sans Unicode", Verdana, Helvetica, Arial, sans-serif;
	}

strong, em, b, i {
    font-family: "Lucida Grande", "Lucida Sans", "Lucida Sans Unicode", Verdana, Helvetica, Arial, sans-serif;
	}

h1, .blog-title, h2, h3 {
	font-family: "Trebuchet MS", Verdana, sans-serif;
	}

h4, h5, h6 {
	font-family: Verdana, sans-serif;
	}


/* Page Structure */

body {
	font-size: 62.5%; /* Resets 1em to 10px */
	color: #444;
	background: #eee;
	text-align: center;
	}

body.lang-ar,
body.lang-fa,
body.lang-he,
body.lang-hi,
body.lang-km,
body.lang-ko,
body.lang-ja,
body.lang-th,
body.lang-zh {
	font-size: 75%; /* Resets 1em to 12px, for internationalized K2s */
	}

#page,
body.smartposition #rollingarchives {
	background: white;
	}


#page {
	text-align: left;
	margin: 0 auto;
	padding-top: 20px;
	position: relative;
	border: 1px solid #ddd;
	border-top: none;
	clear: both;
	border-bottom-left-radius: 5px;
	border-bottom-right-radius: 5px;
	-moz-border-radius-bottomleft: 5px;
	-moz-border-radius-bottomright: 5px;
	-webkit-border-bottom-left-radius: 5px;
	-webkit-border-bottom-right-radius: 5px;
	}

.columns-one #page {
	width: 560px;
	}

.columns-two #page {
	width: 780px;
	}

.columns-three #page {
	width: 950px;
	}

#header {
	position: relative;
	height: 200px;
	background: #3371A3;
	background-position: top right;
	background-repeat: no-repeat;
	}

.wrapper {
	padding: 0 20px 30px;
	}

.columns-two .secondary {
	float: right;
	}

#primary {
	position: relative;
	float: left;
	width: 500px;
	padding: 10px;
	}

body.home.rollingarchives #primary { /* Flush RA with header */
	padding-top: 0;
}

body.home.onepageonly.rollingarchives #primary { /* No RA, so back to 10px */
	padding-top: 10px;
}


* html #primary {
	display: inline;
	}

.sidebars-none #primary {
	margin: 0px;
	float: none;
	}

.sidebars-none #primary {
	float: none;
	width: auto !important;
	margin: 0px !important;
	}

.columns-one .secondary {
	width: 240px;
	border-top: 1px solid #eee;
	}

.columns-three .secondary {
	width: 175px;
	}

.secondary {
	width: 200px;
	float: left;
	font-size: 1em;
	line-height: 1.5em;
	color: #666;
	padding: 0 10px;
	overflow: hidden;
	}

#widgets-sidebar-2 {
	clear: right;
	}

.comments {
	clear: both;
	text-align: left;
	margin: 30px 0 0;
	position: relative;
	}


/* Main Menu in Header */

.menu {
	position: absolute;
	white-space: nowrap;
	bottom: 0;
	margin: 0 20px;
	}

.menu > ul {
	float: left;
	}

.menu li {
	list-style: none;
	}

.menu li a {
	display: block;
	outline: 0;
	}

.menu li a:hover {
	text-decoration: none;
	}

.menu > ul > li { /* Top Menu Items */
	float: left;
	}

.menu > ul > li > a { /* Top Menu */
	margin-left: 5px;
	padding: 5px 15px;
	color: white;

	border-top-left-radius: 3px;
	border-top-right-radius: 3px;
	-moz-border-radius-topleft: 3px;
	-moz-border-radius-topright: 3px;
	-webkit-border-top-left-radius: 3px;
	-webkit-border-top-right-radius: 3px;
	}

.menu > ul > li.current_page_ancestor > a,
.menu > ul > li.current_page_item > a {
	color: #333;
	background: white;
	}

.menu > ul > li:hover > a,
.menu > ul > li.sfHover > a { /* Top level hover*/
	color: #eee;
	background-color: #333;
	}

.menu > ul > li.has_children > a { /* Top level parent */
	padding-right: 18px;
	position: relative;
	}

.menu > ul > li.current_page_ancestor.has_children > a:after,
.menu > ul > li.current_page_item.has_children > a:after {
	background: url('images/arrows.png') no-repeat left top;
	}

.menu > ul > li.has_children:hover > a:after,
.menu > ul > li.has_children.sfHover > a:after,
.menu > ul > li.has_children > a:after { /* Dropdown indicators */
	position: absolute;
	right: 5px;
	top: 10px;
	height: 4px;
	width: 7px;
	content: '';
	background: url('images/arrows.png') no-repeat left bottom;
	}
/* ... */

